<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iam"
        android:textSize="20sp"
        android:id="@+id/tvQuestion"
        android:padding="20dp"
    />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/rgAnswers">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crazy"
            android:id="@+id/rbCrazy"
            android:layout_gravity="center_vertical"
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexy"
            android:id="@+id/rbSexy"
            android:layout_gravity="center_vertical"
        />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both"
            android:id="@+id/rbBoth"
            android:layout_gravity="center_vertical"
        />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rtrn"
        android:id="@+id/bReturn"
        android:layout_gravity="center_vertical"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAnswer"
        android:textSize="20sp"
    />

</LinearLayout>
