<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="@drawable/back_ground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/tvScore"
        android:textColor="#3399FF"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="right"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:id="@+id/tvTimer"
        android:textColor="#00A300"
        android:layout_marginRight="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="5dp"
        android:layout_gravity="right"
    />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="130dp"
        android:gravity="center"
        android:id="@+id/ivGrki"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@null"
        android:layout_gravity="center_horizontal"
    />

    <Button
        android:layout_width="241dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:id="@+id/bStart"
        android:layout_gravity="center"
        android:layout_marginTop="175dp"
        android:gravity="center"
    />

</LinearLayout>
